# project2_kivilev_m25-555

./: .gitignore  Makefile  README.md  db_meta.json  demo.cast  final_test.py  pyproject.toml
data/: name.json  name_2.json  rename.json
src/primitive_db/: constants.py  core.py  decorators.py  engine.py  main.py  parser.py  utils.py
